@@ -1,3 +1,12 @@
+2007-05-17  Brian Warner  <warner@lothar.com>
+
+	* buildbot/status/words.py: refactor the IRC status bot into
+	separate 'Contact' and 'Channel' classes. The base Contact class
+	contains the interaction code: commands and responses. The
+	IRCContact subclass (and IrcStatusBot 'Channel') handle the
+	IRC-specific aspects. The plan is to write other subclasses for
+	other IM protocols like AIM and Jabber.
+
 2007-04-16  Brian Warner  <warner@lothar.com>
 
 	* CREDITS: update list of contributors. Thank you all!
